[package]
name = "noise_engine_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
libc = "0.2.147"
once_cell = "1.15.0"
ash = "0.37.3"
enumflags2 = "0.7.5"
lockfree = "0.5.1"
rsevents = "0.3.1"
arc-cell = "0.3.3"
const-utf16 = "0.2.1"
cgmath = "0.18.0"
crossbeam-queue = "0.3.8"
anyhow = "1.0.71"
image = "0.24.6"
webp = "0.2.2"
vma = "0.3.1"
cpal = "0.15.2"

[dependencies.uuid]
version = "1.2.2"
features = ["v4"]
